Packets with an on-the-network length > 64KB in pcap files cause read errors
This issue was migrated from bug 8808 in our old bug tracker.
Original bug information:
Reporter: Tomasz Mon
Status: RESOLVED FIXED
Product: Wireshark
Component: Capture file support (libwiretap)
OS: All
Platform: All
Version: Git
Attachments:
0001-Do-not-check-orig_len-against-WTAP_MAX_PACKET_SIZE.patch: Remove orig_len check. This is not the final solution.
RazerBladeR2.pcap.bz2: Sample USBPcap trace with packets over 64KB with snaplen 65535.
See also: Issue #9390 (closed)