Copy over r49999 from trunk:

------------------------------------------------------------------------
  r49999 | eapache | 2013-06-17 18:02:26 -0700 (Mon, 17 Jun 2013) | 10 lines

  Don't limit the on-the-wire length of packets to 64KB, there are larger packets
  out there (especially over USB) and we should be able to load them as long as
  they are snapped to a sane length.

  Also validate that packets do not specify a snapshot length larger than the one
  in the file header, though only make it a warning, as this is not necessarily a
  fatally corrupt packet.

  https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8808

  ------------------------------------------------------------------------

Also fixes bug 9390.

svn path=/trunk-1.10/; revision=53123